// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Call to Action 1`] = `
<button
  className="sc-gZMcBi fDLIXu sc-htoDjs ifkBJX"
  disabled={undefined}
  id={undefined}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Default - link 1`] = `
<a
  className="sc-VigVT cZkyFH sc-dnqmqq fselgR"
  disabled={false}
  href="http://www.google.com"
  id={undefined}
  target="_blank"
  title="Click me"
>
  Click me
</a>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-VigVT eYHbkk sc-htoDjs ifkBJX"
  disabled={false}
  id={undefined}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Flat 1`] = `
<button
  className="sc-gqjmRU gIKjDZ sc-htoDjs ifkBJX"
  disabled={undefined}
  id={undefined}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  <span
    aria-hidden={true}
    className="sc-iwsKbI jSMqMr"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
    role="img"
  />
</button>
`;

exports[`Storyshots Button On a contrast area 1`] = `
<div
  className="sc-jTzLTM hDWBpv"
>
  <div
    className="sc-bwzfXH iXkNPI"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-bwzfXH KPFhn"
      >
        <div
          className="sc-bwzfXH jHAPPC"
        >
          <button
            className="sc-VigVT hzpyGR sc-htoDjs ifkBJX"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            Click me
          </button>
        </div>
        <div
          className="sc-bwzfXH jHAPPC"
        >
          <button
            className="sc-VigVT eGcvBH sc-htoDjs ifkBJX"
            disabled={undefined}
            id={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            <span
              aria-hidden={true}
              className="sc-iwsKbI jSMqMr"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "test-file-stub",
                }
              }
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button With an icon 1`] = `
<button
  className="sc-gZMcBi fDLIXu sc-htoDjs ifkBJX"
  disabled={false}
  id={undefined}
  onClick={[Function]}
  title="Press any key to continue"
  type="button"
>
  <span
    className="sc-htpNat gHlfqR"
  >
    <span
      aria-hidden={true}
      className="sc-iwsKbI jSMqMr"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
  </span>
  Press any key to continue
</button>
`;
